# 02.Trading-Algorithm

./: .env  .env.example  .gitignore  Dockerfile  README.md  alpaca_client.py  api_server.py  data_manager.py  db.py  docker-compose.yml  gpt_client.py  logger.py  main.py  report.py  requirements.txt  scheduler.py  trade_manager.py  universe_manager.py  utils.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  api_server.py  data_manager.py  db.py  logger.py  main.py  pyproject.toml  requirements.txt  scheduler.py  utils.py
backend/api/: api_server.py
backend/backtest/: prices.py  run.py  simulator.py
backend/clients/: alpaca_client.py  binance_client.py  etoro_client.py  etoro_rate_limiter.py  gpt_client.py
backend/core/: app_db.py  auth.py  db.py  fx.py  logger.py  prompt_store.py  utils.py
backend/etoro_bot/: __init__.py  config.py  domain.py  main.py
backend/services/: benchmark.py  data_manager.py  equity_snapshots.py  exit_eval.py  exit_levels.py  live_snapshot.py  metrics_service.py  order_exec.py  portfolio_risk.py  regime.py  report.py  report_index.py  scheduler.py  trade_admin.py  trade_analytics.py  trade_manager.py  universe_admin.py  universe_manager.py
backend/tests/: conftest.py  test_api.py  test_app_settings.py  test_backtest_metrics.py  test_backtest_prices.py  test_backtest_run.py  test_backtest_simulator.py  test_benchmark.py  test_close_resolution.py  test_data_manager.py  test_db_migration.py  test_db_purge_backfilled.py  test_db_repo.py  test_etoro_client.py  test_etoro_config.py  test_etoro_equity_snapshots.py  test_fx.py  (+35 more)
(+362 files in other folders)
