[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etoro-bot"
version = "3.0.0"
description = "Trading Bot multi-agent (LangGraph + deterministic risk layer)"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "openai>=1.50",
    "pydantic>=2",
    "pyyaml>=6",
    "requests>=2.31",
    "numpy>=1.26",
    "sqlalchemy>=2",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "cryptography>=45.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
]
rag = [
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "pypdf>=4.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["etoro_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
